# lakeside

./: .gitignore  DUCKDB_SETUP.md  PRODUCTION_ROADMAP.md  package.json
.github/workflows/: rust.yml  vitest.yml
compactor/: package.json  wrangler.toml
compactor/src/: compaction-coordinator.ts  transaction-log.ts  worker.ts
gateway/: package-lock.json  package.json  wrangler.toml
gateway/src/: worker.ts
parquet-generator/: Cargo.toml
parquet-generator/src/: lib.rs  schema_builder.rs
schema-manager/: package.json  tsconfig.json  wrangler.toml
schema-manager/src/: worker.ts
scripts/: deploy.ts
wasm-test/: package.json  wrangler.toml
wasm-test-rs/: Cargo.toml
wasm-test-rs/src/: lib.rs
wasm-test/src/: worker.ts
