[package]
name = "parquet-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
parquet = { version = "48.0.0", features = ["arrow", "json", "flate2"], default-features = false }
rust-s3 = { version = "0.33.0", features = ["sync"], default-features = false }
wasm-bindgen = "0.2.74"
