[package]
name = "parquet-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
parquet = { version = "50.0.0", features = ["arrow", "json", "flate2"], default-features = false }
wasm-bindgen = "0.2.74"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
